[package]
name = "tmx_reader"
version = "0.1.0"
authors = ["Jochen Mader <jochen@codepitbull.de>"]
edition = "2018"
description = "A rough implementation of a reader for TMX (Tiled) files."
repository = "https://github.com/codepitbull/tmx_reader"
readme = "README.md"
license = "EPL-2.0"

[dependencies]
quick-xml = "0.13.2"